jena-shex/src/test/files/spec/negativeStructure/Cycle2Negation.shex
# Negated circular reference to :S.
PREFIX :       <http://example.org/>

:S NOT {
  :a @:S
}
